# eml-research

./: .gitignore  LICENSE  README.md
eml_try_1/: CMakeLists.txt  README.md  eml_base.txt  eml_c.c  eml_compiler.py  eml_core.py  eml_vm.py  gui.py  main.py
flappy_bird_with_ai/: README.md  benchmark.py  config.py  demo.py  eml_distiller.py  env.py  ga_net.py  gui.py  main.py  requirements.txt  storage.py  update.md
flappy_bird_with_ai/models/: best_ga.pt  eml-medium_2026-05-29_11-24-37_score-55.json  eml-strong_2026-05-29_19-41-18_score-55.json  eml-weak_2026-05-29_11-24-37_score-55.json
flappy_bird_with_ai/results/: benchmark_2026-05-24_02-13-26.json  benchmark_2026-05-24_03-17-14.json  benchmark_2026-05-24_14-24-51.json  benchmark_2026-05-29_01-01-12.json  benchmark_2026-05-29_11-24-37.json  benchmark_2026-05-29_19-41-18.json
tetris/: README.md  cnn_oracle.py  config.py  dataset_collector.py  eml_distiller.py  env.py  features.py  gui.py  main.py  pieces.py  pipeline.py  ppo_trainer.py  reports.py  requirements.txt  runs.py  storage.py
tetris/models/: best_eml.json  best_eml_framebased_v1.json  best_eml_v4_19feat.json
tetris/results/: benchmark_games.csv  benchmark_table.csv  distill_history.json  eml_formula.h  ppo_history.json
tetris_prototype/: README.md  cnn_oracle.py  config.py  env.py  features.py  gui.py  main.py  pieces.py  ppo_trainer.py  requirements.txt  storage.py
